--- a/hist_ipynb.ipynb
+++ b/hist_ipynb.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "# Tweak spacing to prevent clipping of ylabel\n",
     "fig.tight_layout()\n",
-    "plt.sho()"
+    "plt.show()"
    ]
   },
   {
